KIO::CommandLauncherJob: Inherit environment variables by default

Before Qt 6.3, an empty (default constructed) QProcessEnvironment caused
QProcess to incorrectly inherit the environment variables from the parent
process. This was fixed in qtbase 5fc9c02a695.

Adjust for this behaviour change by explicitly inheriting the environment
from the parent, to restore useful default behaviour of CommandLauncherJob.

BUG: 470984